# mangui

./: Cargo.toml  README.md  shell.nix
mangades/: Cargo.toml
mangades-plain/: Cargo.toml
mangades-plain/demo/: list.json
mangades-plain/src/: main.rs  tokens.rs  utils.rs
mangades-plain/src/anilist/: mod.rs
mangades/src/: component_demo.rs  component_demo_syntax.rs  main.rs  slot_demo.rs
rusalka/: Cargo.toml  README.md
rusalka-macro/: Cargo.toml
rusalka-macro/src/: lib.rs
rusalka/src/: component.rs  invalidator.rs  lib.rs
rusalka/src/nodes/: mod.rs  primitives.rs
rusalka/src/store/: mod.rs
src/: main.rs
src/nodes/: layout.rs  mod.rs  primitives.rs
ui/: Cargo.toml
ui/src/: lib.rs
ui/src/events/: handler.rs  mod.rs
ui/src/nodes/: image.rs  layout.rs  mod.rs  primitives.rs  text.rs  text_render_cache.rs
uno-gen/: Cargo.toml
uno-gen/src/: lib.rs
