[package]
name = "mangades-plain"
version = "0.1.0"
edition = "2021"
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mangui = { path = "../ui" }
uno-gen = { path = "../uno-gen" }

serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
futures = "0.3.30"
reqwest = "0.11.24"
image = "0.24.9"
bytes = "*"
lazy_static = "1.4.0"