[package]
name = "mangui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
femtovg = "0.7.1"
glutin = "0.31.0"
raw-window-handle = "0.5.0"
winit = {  version = "0.29.2" }
glutin-winit = "0.4.2"
taffy = "0.3.16"
weak-table = "0.3.2"