[package]
name = "mangui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
femtovg = { path = "../femtovg" }
glutin = "0.31.3"
raw-window-handle = "0.5.0"
winit = {  version = "0.29.10" }
glutin-winit = "0.4.2"
taffy = "0.4.0"
weak-table = "0.3.2"
cosmic-text = "0.11.2"
swash = "0.1.12"
lazy_static = "1.4.0"